--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,6 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   background-color: var(--theme);
-  color: var(white);
+  color: var(--white);
 }
 
