--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,12 @@
 .nav {
     background-color: aliceblue;
 }
+
+/*position: absolute;
+width: 977px;
+height: 139px;
+left: 351px;
+top: -95px;
+
+background: #18B2DE;
+filter: blur(100px);*/
