Updated styles for Header component: changed color property for .links a, removed !important, and added hover effect

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -13,8 +13,12 @@
 }
 
 .links a{
-    color:var(--white) !important;
+    color:var(--white);
     text-decoration: none !important;
+}
+
+.links a:hover {
+    color: #8f8297;
 }
 
 /*position: absolute;
