Added margin: auto and z-index: -1 to Header styles

--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -29,7 +29,8 @@
     height: 150px;
     left: 351px;
     top: -95px;
-
+    margin: auto;
     background: #18B2DE;
     filter: blur(100px);
+    z-index: -1
 }
