--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -13,7 +13,7 @@
 }
 
 .links a{
-    color:var(--white);
+    color: grey;
     text-decoration: none !important;
 }
 
@@ -32,5 +32,6 @@
     margin: auto;
     background: #18B2DE;
     filter: blur(100px);
-    z-index: -1
+    z-index: -1;
+    top: -100px;
 }
